# vsdl

./: .gitignore
generate/: CMakeLists.txt
generate/src/: CMakeLists.txt
generate/test/: CMakeLists.txt
python/: gzq.py  linearuint.py  perceptron.py  test.py
src/: matrix.hpp
test/: matrix.cpp
